RESOLVED FIXED94870
AX: WebCore accessibility roles should be cross-platform
https://bugs.webkit.org/show_bug.cgi?id=94870
Summary AX: WebCore accessibility roles should be cross-platform
Dominic Mazzoni
Reported 2012-08-23 15:46:54 PDT
There are several roles like SplitterRole, ParagraphRole, etc. that are only currently used on some platforms, like GTK. Let's get rid of the platform-specific logic in WebCore/accessibility, and just map them to the proper native roles on each platform in the platform-specific subdirectories. This will help avoid subtle bugs where a test behaves differently on one platform because other logic in WebCore uses the role, and also make it easier for platforms to take advantage of more roles as the native roles get expanded.
Attachments
Patch (13.28 KB, patch)
2012-08-24 11:12 PDT, Dominic Mazzoni
no flags
Rebase (11.99 KB, patch)
2012-09-07 01:24 PDT, Dominic Mazzoni
no flags
Rebase (12.04 KB, patch)
2012-09-07 01:46 PDT, Dominic Mazzoni
no flags
Rebase (12.00 KB, patch)
2012-09-07 02:55 PDT, Dominic Mazzoni
no flags
Patch for landing (12.00 KB, patch)
2012-09-07 09:17 PDT, Dominic Mazzoni
no flags
Patch for landing (16.19 KB, patch)
2012-09-07 15:13 PDT, Dominic Mazzoni
no flags
Dominic Mazzoni
Comment 1 2012-08-24 11:12:05 PDT
chris fleizach
Comment 2 2012-08-24 11:14:14 PDT
Comment on attachment 160457 [details] Patch looks good
WebKit Review Bot
Comment 3 2012-08-24 11:14:49 PDT
Please wait for approval from abarth@webkit.org, dglazkov@chromium.org, fishd@chromium.org, jamesr@chromium.org or tkent@chromium.org before submitting, as this patch contains changes to the Chromium public API. See also https://trac.webkit.org/wiki/ChromiumWebKitAPI.
WebKit Review Bot
Comment 4 2012-08-24 11:19:30 PDT
Comment on attachment 160457 [details] Patch Attachment 160457 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/13600214
Build Bot
Comment 5 2012-08-24 11:31:14 PDT
Gyuyoung Kim
Comment 6 2012-08-24 11:42:27 PDT
Early Warning System Bot
Comment 7 2012-08-24 11:46:53 PDT
Early Warning System Bot
Comment 8 2012-08-24 11:56:59 PDT
Build Bot
Comment 9 2012-08-24 11:57:18 PDT
Peter Beverloo (cr-android ews)
Comment 10 2012-08-24 12:15:54 PDT
Comment on attachment 160457 [details] Patch Attachment 160457 [details] did not pass cr-android-ews (chromium-android): Output: http://queues.webkit.org/results/13605140
Dominic Mazzoni
Comment 11 2012-08-24 12:41:48 PDT
Sorry, this won't compile under after 94302 is re-landed.
Dominic Mazzoni
Comment 12 2012-09-07 01:24:15 PDT
Dominic Mazzoni
Comment 13 2012-09-07 01:46:10 PDT
Dominic Mazzoni
Comment 14 2012-09-07 02:55:29 PDT
Dominic Mazzoni
Comment 15 2012-09-07 09:17:21 PDT
Created attachment 162786 [details] Patch for landing
WebKit Review Bot
Comment 16 2012-09-07 12:36:33 PDT
Comment on attachment 162786 [details] Patch for landing Rejecting attachment 162786 [details] from commit-queue. New failing tests: platform/chromium/accessibility/chromium-only-roles.html accessibility/canvas-fallback-content.html accessibility/div-within-anchors-causes-crash.html accessibility/adjacent-continuations-cause-assertion-failure.html accessibility/inline-continuations.html Full output: http://queues.webkit.org/results/13772837
Dominic Mazzoni
Comment 17 2012-09-07 15:13:39 PDT
Created attachment 162882 [details] Patch for landing
WebKit Review Bot
Comment 18 2012-09-07 16:46:22 PDT
Comment on attachment 162882 [details] Patch for landing Clearing flags on attachment: 162882 Committed r127936: <http://trac.webkit.org/changeset/127936>
WebKit Review Bot
Comment 19 2012-09-07 16:46:27 PDT
All reviewed patches have been landed. Closing bug.
mitz
Comment 20 2012-09-07 20:02:14 PDT
(In reply to comment #18) > (From update of attachment 162882 [details]) > Clearing flags on attachment: 162882 > > Committed r127936: <http://trac.webkit.org/changeset/127936> This change has caused multiple accessibility tests to fail. See <http://build.webkit.org/results/Apple%20MountainLion%20Debug%20WK1%20(Tests)/r127946%20(650)/results.html>.
mitz
Comment 21 2012-09-07 20:19:18 PDT
(In reply to comment #20) > (In reply to comment #18) > > (From update of attachment 162882 [details] [details]) > > Clearing flags on attachment: 162882 > > > > Committed r127936: <http://trac.webkit.org/changeset/127936> > > This change has caused multiple accessibility tests to fail. See <http://build.webkit.org/results/Apple%20MountainLion%20Debug%20WK1%20(Tests)/r127946%20(650)/results.html>. Filed bug 96173.
Roger Fong
Comment 22 2012-09-08 21:33:00 PDT
It also broke three windows tests: accessibility/adjacent-continuations-cause-assertion-failure.html accessibility/deleting-iframe-destroys-axcache.html accessibility/div-within-anchors-causes-crash.html But all the diff's are along the lines of : client editable text - grouping + client editable text editable text - grouping + client editable text - grouping + client editable text - grouping + client editable text editable text editable text I suspect that due to Windows accessibility limitations that these 3 tests just need Windows specific results.
Dominic Mazzoni
Comment 23 2012-09-09 15:04:24 PDT
(In reply to comment #22) > It also broke three windows tests: > > accessibility/adjacent-continuations-cause-assertion-failure.html > accessibility/deleting-iframe-destroys-axcache.html > accessibility/div-within-anchors-causes-crash.html Filed this bug and uploaded a patch for review: https://bugs.webkit.org/show_bug.cgi?id=96219
Note You need to log in before you can comment on or make changes to this bug.