third_party/WebKit/Source/WebCore/accessibility/AccessibilityObject.h
@@ -131,6 +131,7 @@ enum AccessibilityRole {
     GrowAreaRole,
     HeadingRole,
     HelpTagRole,
+    HorizontalRuleRole,
     IgnoredRole,
     ImageRole,
     ImageMapRole,
