third_party/WebKit/Source/WebCore/accessibility/gtk/AccessibilityObjectAtk.cpp
@@ -42,7 +42,7 @@ AccessibilityObjectInclusion AccessibilityObject::accessibilityPlatformIncludesO
         return DefaultBehavior;
 
     AccessibilityRole role = roleValue();
-    if (role == SplitterRole)
+    if (role == HorizontalRuleRole)
         return IncludeObject;
 
     // We expose the slider as a whole but not its value indicator.
