third_party/WebKit/Source/WebKit/chromium/public/WebAccessibilityRole.h
@@ -76,6 +76,7 @@ enum WebAccessibilityRole {
     WebAccessibilityRoleGrowArea,
     WebAccessibilityRoleHeading,
     WebAccessibilityRoleHelpTag,
+    WebAccessibilityRoleHorizontalRule,
     WebAccessibilityRoleIgnored,
     WebAccessibilityRoleImage,
     WebAccessibilityRoleImageMap,
